--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -628,4 +628,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="newtab_select_local_directory">Speicherort angeben</string>
     <string name="pref_scroll_to_active_tab_title">Blättern Sie zur aktiven Registerkarte</string>
     <string name="pref_scroll_to_active_tab_summary">Blättern Sie zum aktiven Tab, wenn Sie die inaktive Registerkarte schließen</string>
+    <string name="pref_deleted_limit_summary">Beschränken Sie die Anzahl der gelöschten Nachrichten, die im App-Cache gespeichert sind</string>
+    <string name="pref_deleted_limit_title">Anzahl der gelöschten Nachrichten zu behalten</string>
 </resources>
