--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -627,4 +627,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="newtab_select_local_directory">Specify directory location</string>
     <string name="pref_scroll_to_active_tab_summary">Scroll to the active tab when closing inactive tab</string>
     <string name="pref_scroll_to_active_tab_title">Scroll to the active tab</string>
+    <string name="pref_deleted_limit_title">Number of deleted messages to keep</string>
+    <string name="pref_deleted_limit_summary">Limit the number of deleted messages that are stored in the app cache</string>
 </resources>
